welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:12: error: value lenght is not a member of Array[java.awt.Color]
	for(i <- 1 to T.lenght-1)
                        ^